@@ -4,6 +4,7 @@ wiLink 0.9.8 (UNRELEASED)
  * Make it possible to search in debugging console.
  * Make it possible to search in chat history.
  * Use silent installer for upgrades on Windows.
+ * Fix sorting of roster entries with identical names.
 
 wiLink 0.9.7 (2010-06-23)
  * After renaming a contact, display the new name.
